--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@
 }
 
 .index .text-wrapper-2 {
-  color: #d6a058;
+  color: #00ffff;
   font-family: "Black Han Sans", Helvetica;
   font-size: 16px;
   font-weight: 400;
